--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Coqui Bar">
+  <link href="reset.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <title>Coqui Bar | San Antonio</title>
   <link rel="icon" href="img/coqui_bl-remove_bg.png">
