adjust css on images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="hero">
       <div>
         <h1>
-          The Coqui, a full service bar offering:
+          The Coqui
         </h1>
         <ul>
           <li>Diverse Coctails</li>
