--- a/index.html
+++ b/index.html
@@ -40,25 +40,24 @@
 
       </div>
     </aside>
-    <section>
-      <h1>Drink Selections</h1>
-      <article>
-        <h2>The bar serves a variety of traditional Puerto Rican cocktails such as the "Mojito Criollo" which is a mojito variation made with local rum and the use of local mint to add a local touch to it.<br><br><br>For those who prefer a different type of drink, The Coqui also offers a wide selection of rum, tequila, mezcal, whiskey, and gin.
-        </h2>
-    </article>
-    </section>
+
     <section class="sharp">
       <div class="shdiv">
         <h1>Friendly Staff</h1>
         <h5>Out bartending staff is energetic, knowlegable, and just fun to talk to.</h5>
        </div>
     </section>
-    <section id="staff">
-      <h1>Staff Schedule for the Upcoming Month</h1>
+    <section id="events">
+      <h1>Weekly Events</h1>
 
-      <h2>Staff Picture 1</h2>
-      <br/>
-      <h2>Staff Picture 1</h2>
+      <br>
+      <h2>Dart Leagues</h2>
+          
+      <br><br>
+      <h2>Pool Leagues</h2>
+
+      <br><br>
+
     </section>
     <section class="sharp2">
       <div class="shdiv">
@@ -66,18 +65,7 @@
         <h5>Coqui is a bar that prides itself on being inclusive.The bar provides a diverse and welcoming environment that makes everyone feel at home.</h5>
       </div>
     </section>
-    <section id="events">
-      <h1>Events</h1>
 
-      <br>
-      <h2>Event 1</h2>
-          
-      <br><br>
-      <h2>Event 2</h2>
-
-      <br><br>
-
-    </section>
   </main>
 
   <script src="footer.js"></script>
